--- a/custom_components/neviweb130/manifest.json
+++ b/custom_components/neviweb130/manifest.json
@@ -6,6 +6,7 @@
     "@claudegel"
   ],
   "documentation": "https://github.com/claudegel/sinope-130",
+  "config_flow": true,
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/claudegel/sinope-130/issues",
